fix alignment bug in uofg-header for sub nav

--- a/src/components/uofg-header/uofg-header.scss
+++ b/src/components/uofg-header/uofg-header.scss
@@ -486,6 +486,7 @@ uofg-menu {
 
 .uofg-header-sub-content {
   display: flex;
+  margin-left: auto;
 }
 
 #uofg-header-full-sub-content,
